# earheart

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  electron-builder.yml  package-lock.json  package.json  preload.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  flutter-poc.yml  pr-title.yml  release.yml  star-history.yml
app/: README.md  pubspec.yaml
app/lib/: deliver.dart  hotkey.dart  main.dart  overlay.dart  pipeline.dart  recorder.dart  settings.dart  stt.dart  tray.dart
app/linux/: CMakeLists.txt
app/test/: deliver_test.dart  pcm_test.dart  pipeline_test.dart
docs/: flutter-rewrite.md  live-transcription-plan.md
docs/icon-proposals/: README.md
flutter-app/: README.md  pubspec.yaml
main/: autostart.js  cleanup-styles.js  history.js  hotkeys.js  ipc.js  live-preview.js  main.js  pipeline.js  settings.js  tray.js  updates.js  windows.js
main/util/: rtf.js  (+2 more)
renderer/: overlay.css  overlay.html  overlay.js  recorder-worklet.js  settings.css  settings.html  settings.js  transcript.js  wizard.css  wizard.html  wizard.js
scripts/: e2e-latency.js  engine-smoke.js  gen-icon-proposals.js  gen-icons.js  overlay-smoke.js  screenshots.js  try-cleanup-prompts.mjs
stt-server/: README.md  pyproject.toml
stt-server/src/earheart_stt/: __init__.py  cli.py  server.py
test/: engines.test.js  hf-gguf.test.js  hf-models.test.js  host.test.js  live-preview.test.js  rtf.test.js  settings-contract.test.js  unit.test.js  update-feed.test.js
(+46 files in other folders)
