[project]
name = "earheart-stt"
version = "0.1.0"
description = "Local speech-to-text server using NVIDIA Parakeet (ONNX), exposing an OpenAI-compatible /v1/audio/transcriptions endpoint."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Earheart contributors" }]
keywords = ["speech-to-text", "asr", "parakeet", "onnx", "whisper-alternative"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.12",
    "onnx-asr[cpu,hub]>=0.7",
    "soundfile>=0.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
# pip install "earheart-stt[gpu]" — requires CUDA; see README.
gpu = ["onnxruntime-gpu>=1.20"]

[project.scripts]
earheart-stt = "earheart_stt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earheart_stt"]
